--- a/gk.bib
+++ b/gk.bib
@@ -4378,7 +4378,7 @@ howpublished = {NBER}
 	volume= 589,
 	year= 2003,
 	pages={63-93},
-	month=9s
+	month=9
 }
 
 @article{GlaMayDec06,
@@ -10249,15 +10249,15 @@ pages={706-719}
 }
 
 @article{Rubin01,
-	author={Donald B. Rubin},
-	title={Using propensity scores to help design observational studies: Application
-		to the tobacco litigation},
-	journal={Heatlh Services \& Outcomes Research Methodology},
-	volume={2},
-	year={2001},
-	pages={169-188},
-	month={December},
-	number={3-4}
+  author =       {Donald B. Rubin},
+  title =        {Using propensity scores to help design observational
+                  studies: Application to the tobacco litigation},
+  journal =      {Heatlh Services \& Outcomes Research Methodology},
+  volume =       {2},
+  year =         {2001},
+  pages =        {169-188},
+  month =        {December},
+  number =       3
 }
 
 @unpublished{Rubin04,
