--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -506,15 +506,15 @@ pages={1037--1060},
 }
 
 @article{HoImaKin07,
-  author =	 {Daniel Ho and Kosuke Imai and Gary King and
+  author =       {Daniel Ho and Kosuke Imai and Gary King and
                   Elizabeth A. Stuart},
-  title =	 {Matching as Nonparametric Preprocessing for Reducing
+  title =        {Matching as Nonparametric Preprocessing for Reducing
                   Model Dependence in Parametric Causal Inference},
-  journal =	 {Political Analysis},
-  year =	 {2007},
-  volume =	 {15},
-  pages =	 {199--236},
-  note =	 {\url{http://gking.harvard.edu/files/abs/matchp-abs.shtml}}
+  journal =      {Political Analysis},
+  year =         {2007},
+  volume =       {15},
+  pages =        {199--236},
+  url =          {j.mp/matchP}
 }
 
 @article{HopKin10b,
@@ -734,15 +734,14 @@ pages={1037--1060},
 }
 
 @article{KinZen06,
-  author =	 {Gary King and Langche Zeng},
-  title =	 {The Dangers of Extreme Counterfactuals},
-  journal =	 {Political Analysis},
-  volume =	 {14},
-  year =	 2006,
-  pages =	 {131--159},
-  number =	 {2},
-  note =
-                  {{http://gking.harvard.edu/files/abs/counterft-abs.shtml}}
+  author =       {Gary King and Langche Zeng},
+  title =        {The Dangers of Extreme Counterfactuals},
+  journal =      {Political Analysis},
+  volume =       {14},
+  year =         2006,
+  pages =        {131--159},
+  number =       {2},
+  url =          {j.mp/dangerEC}
 }
 
 @article{GirKin07,
