--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -434,27 +434,15 @@ pages={1037--1060},
 }
 
 @article{ImaKinStu08,
-  author =	 {Kosuke Imai and Gary King and Elizabeth A. Stuart},
-  title =	 {Misunderstandings Among Experimentalists and
+  author =       {Kosuke Imai and Gary King and Elizabeth A. Stuart},
+  title =        {Misunderstandings Among Experimentalists and
                   Observationalists about Causal Inference},
-  journal =	 {Journal of the Royal Statistical Society, {S}eries
+  journal =      {Journal of the Royal Statistical Society, {S}eries
                   {A}},
-  volume =	 {171, part 2},
-  year =	 {2008},
-  pages =	 {481--502},
-  note =
-                  {{http://gking.harvard.edu/files/abs/matchse-abs.shtml}}
-}
-
-@article{uImaKinStu08,
-  author =	 {Kosuke Imai and Gary King and Elizabeth A. Stuart},
-  title =	 {Misunderstandings Among Experimentalists and
-                  Observationalists about Causal Inference},
-  journal =	 {Journal of the Royal Statistical Society, {S}eries
-                  {A}},
-  volume =	 {171, part 2},
-  year =	 {2008},
-  pages =	 {481--502}
+  volume =       {171, part 2},
+  year =         {2008},
+  pages =        {481--502},
+  url =          {j.mp/misunEO}
 }
 
 @article{KinLu08,
