--- a/gk.bib
+++ b/gk.bib
@@ -2906,7 +2906,7 @@ howpublished = {NBER}
 }
 
 @article{Dehejia05,
-	author={Dehejia Rajeev},
+	author={Dehejia H. Rajeev},
 	title={Practical Propensity Score Matching: A Reply to Smith and Todd},
 	journal={Journal of Econometrics},
 	volume={125},
