--- a/gk.bib
+++ b/gk.bib
@@ -24769,3 +24769,25 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   journal={arXiv preprint arXiv:1402.0142},
   year={2016}
 }
+@article{WenFlaVes11,
+  title =        {Competition among memes in a world with limited
+                  attention},
+  author =       {Weng, Lilian and Flammini, Alessandro and
+                  Vespignani, Alessandro and Menczer, Fillipo},
+  journal =      {Scientific reports},
+  volume =       {2},
+  year =         {2012},
+  publisher =    {Nature Publishing Group}
+}
+@article{LinKeeMar14,
+  title =        {Rising tides or rising stars?: Dynamics of shared
+                  attention on Twitter during media events},
+  author =       {Lin, Yu-Ru and Keegan, Brian and Margolin, Drew and
+                  Lazer, David},
+  journal =      {PloS one},
+  volume =       {9},
+  number =       {5},
+  pages =        {e94093},
+  year =         {2014},
+  publisher =    {Public Library of Science}
+}
