added compactness citations

--- a/gk.bib
+++ b/gk.bib
@@ -24791,3 +24791,110 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2014},
   publisher =    {Public Library of Science}
 }
+
+@unpublished{KauKraSen17,
+  author={Kaufman, Aaron and Kraft, Peter and Sen, Maya},
+  title={Improving Supreme Court Forecasting Using Boosted Decision Trees},
+  note={Working paper.},
+  year= 2017
+}
+
+@article{Reock61,
+  title={A note: Measuring compactness as a requirement of legislative apportionment},
+  author={Reock, Ernest C},
+  journal={Midwest Journal of Political Science},
+  volume={5},
+  number={1},
+  pages={70--74},
+  year={1961},
+  publisher={JSTOR}
+}
+
+@article{PolPop91,
+  title={The third criterion: Compactness as a procedural safeguard against partisan gerrymandering},
+  author={Polsby, Daniel D and Popper, Robert D},
+  journal={Yale Law \& Policy Review},
+  volume={9},
+  number={2},
+  pages={301--353},
+  year={1991},
+  publisher={JSTOR}
+}
+
+@article{Schwartzberg65,
+  title={Reapportionment, gerrymanders, and the notion of compactness},
+  author={Schwartzberg, Joseph E},
+  journal={Minn. L. Rev.},
+  volume={50},
+  pages={443},
+  year={1965},
+  publisher={HeinOnline}
+}
+
+@article{Young88,
+  title={Measuring the compactness of legislative districts},
+  author={Young, H Peyton},
+  journal={Legislative Studies Quarterly},
+  pages={105--115},
+  year={1988},
+  publisher={JSTOR}
+}
+
+@article{NieGroCar90,
+  title={Measuring compactness and the role of a compactness standard in a test for partisan and racial gerrymandering},
+  author={Niemi, Richard G and Grofman, Bernard and Carlucci, Carl and Hofeller, Thomas},
+  journal={The Journal of Politics},
+  volume={52},
+  number={4},
+  pages={1155--1181},
+  year={1990},
+  publisher={University of Texas Press}
+}
+
+@article{AnsPal16,
+  title={A Two Hundred-Year Statistical History of the Gerrymander},
+  author={Ansolabehere, Stephen and Palmer, Maxwell},
+  journal={Ohio St. LJ},
+  volume={77},
+  pages={741--867},
+  year={2016},
+  publisher={The Ohio State University Law Journal}
+}
+
+@article{Altman98,
+  title={Modeling the effect of mandatory district compactness on partisan gerrymanders},
+  author={Altman, Micah},
+  journal={Political Geography},
+  volume={17},
+  number={8},
+  pages={989--1012},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@techreport{FifHigIma16,
+  title={A new automated redistricting simulator using Markov chain Monte Carlo},
+  author={Fifield, Benjamin and Higgins, Michael and Imai, Kosuke and Tarr, Alexander},
+  year={2016},
+  institution={Working Paper. Available at http://imai. princeton. edu/research/files/redist. pdf}
+}
+
+@article{Rosen96,
+  title={Ensemble learning using decorrelated neural networks},
+  author={Rosen, Bruce E},
+  journal={Connection science},
+  volume={8},
+  number={3-4},
+  pages={373--384},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
+
+@article{MacEachren85,
+  title={Compactness of geographic shape: Comparison and evaluation of measures},
+  author={MacEachren, Alan M},
+  journal={Geografiska Annaler. Series B. Human Geography},
+  pages={53--67},
+  year={1985},
+  publisher={JSTOR}
+}
