--- a/gk.bib
+++ b/gk.bib
@@ -359,7 +359,7 @@ howpublished = {NBER}
   number =       {1}
 }
 
-@article{Altman98,
+@article{AltDeeSac98,
   author =       {Douglas G. Altman and Jonathan J. Deeks and David L.
                   Sackett},
   title =        {Odds Ratios Should be Avoided When Events are
