--- a/gk.bib
+++ b/gk.bib
@@ -24897,4 +24897,25 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={1985},
   publisher={JSTOR}
 }
-
+@article{ZuiFreDam16,
+  title =        {Should We Worry about Filter Bubbles?},
+  author =       {Zuiderveen Borgesius, Frederik J and Trilling,
+                  Damian and Moeller, Judith and Bod{\'o}, Bal{\'a}zs
+                  and de Vreese, Claes H and Helberger, Natali},
+  volume =       {5},
+  number =       {1},
+  journal =      {Internet Policy Review},
+  year =         {2016}
+}
+@book{Noam09,
+  title =        {Media ownership and concentration in America},
+  author =       {Noam, Eli},
+  year =         {2009},
+  publisher =    {Oxford University Press}
+}
+@techreport{AllGen17,
+  title={Social media and fake news in the 2016 election},
+  author={Allcott, Hunt and Gentzkow, Matthew},
+  year={2017},
+  institution={National Bureau of Economic Research}
+}
