--- a/gk.bib
+++ b/gk.bib
@@ -24914,8 +24914,37 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {Oxford University Press}
 }
 @techreport{AllGen17,
-  title={Social media and fake news in the 2016 election},
-  author={Allcott, Hunt and Gentzkow, Matthew},
-  year={2017},
-  institution={National Bureau of Economic Research}
+  title =        {Social media and fake news in the 2016 election},
+  author =       {Allcott, Hunt and Gentzkow, Matthew},
+  year =         {2017},
+  institution =  {National Bureau of Economic Research}
+}
+@article{GerKarBer09,
+  title =        {Does the media matter? A field experiment measuring
+                  the effect of newspapers on voting behavior and
+                  political opinions},
+  author =       {Gerber, Alan S and Karlan, Dean and Bergan, Daniel},
+  journal =      {American Economic Journal: Applied Economics},
+  volume =       {1},
+  number =       {2},
+  pages =        {35--52},
+  year =         {2009},
+  publisher =    {American Economic Association}
+}
+@article{Perloff02,
+  title =        {The third-person effect},
+  author =       {Perloff, Richard M},
+  journal =      {Media effects: Advances in theory and research},
+  volume =       {2},
+  pages =        {489--506},
+  year =         {2002}
+}
+@article{MutSos97,
+  title =        {Reading public opinion: The influence of news
+                  coverage on perceptions of public sentiment},
+  author =       {Mutz, Diana C and Soss, Joe},
+  journal =      {Public Opinion Quarterly},
+  pages =        {431--451},
+  year =         {1997},
+  publisher =    {JSTOR}
 }
