--- a/gk.bib
+++ b/gk.bib
@@ -24948,3 +24948,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1997},
   publisher =    {JSTOR}
 }
+@inproceedings{Harris88,
+  title =        {A combined corner and edge detector.},
+  author =       {Harris, Chris and Stephens, Mike},
+  booktitle =    {Alvey vision conference},
+  volume =       {15},
+  number =       {50},
+  pages =        {10--5244},
+  year =         {1988},
+  organization = {Citeseer}
+}
