--- a/gk.bib
+++ b/gk.bib
@@ -24948,7 +24948,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1997},
   publisher =    {JSTOR}
 }
-@inproceedings{Harris88,
+@inproceedings{HarSte88,
   title =        {A combined corner and edge detector.},
   author =       {Harris, Chris and Stephens, Mike},
   booktitle =    {Alvey vision conference},
