Added ranking versus paired comparison cites

--- a/gk.bib
+++ b/gk.bib
@@ -24958,3 +24958,34 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1988},
   organization = {Citeseer}
 }
+
+@article{GulTuc61,
+  title={A general procedure for obtaining paired comparisons from multiple rank orders},
+  author={Gulliksen, Harold and Tucker, Ledyard R},
+  journal={Psychometrika},
+  volume={26},
+  number={2},
+  pages={173--183},
+  year={1961},
+  publisher={Springer}
+}
+
+@article{Guttman46,
+  title={An approach for quantifying paired comparisons and rank order},
+  author={Guttman, Louis},
+  journal={The Annals of Mathematical Statistics},
+  pages={144--163},
+  year={1946},
+  publisher={JSTOR}
+}
+
+@article{AlwKro85,
+  title={The measurement of values in surveys: A comparison of ratings and rankings},
+  author={Alwin, Duane F and Krosnick, Jon A},
+  journal={Public Opinion Quarterly},
+  volume={49},
+  number={4},
+  pages={535--552},
+  year={1985},
+  publisher={AAPOR}
+}
