--- a/gk.bib
+++ b/gk.bib
@@ -303,7 +303,7 @@ howpublished = {NBER}
   volume =       {57},
   year =         {1990},
   pages =        {403-414},
-  month =        {July},
+  month =        7,
   number =       {3}
 }
 
@@ -905,7 +905,7 @@ howpublished = {NBER}
                   (Education, Health, and Nutrition Program)},
   institution =  {International Food Policy Research Institute},
   year =         {1999},
-  month =        {March},
+  month =        3,
   type =         {Research Report},
   address =      {2033 K Street, NW Washington, DC 20006},
   note = {\url{http://goo.gl/YLWz8x}}
@@ -9428,7 +9428,7 @@ pages={706-719}
 	volume={111},
 	year={2002},
 	pages={1665-1705},
-	month={May},
+	month=5,
 	number={7}
 }
 
@@ -11606,7 +11606,7 @@ pages={706-719}
 	volume={71},
 	year={2003},
 	pages={231-254},
-	month={April},
+	month=4,
 	number={2}
 }
 
@@ -11928,7 +11928,7 @@ pages={706-719}
 	volume= 12,
 	year= 2005 ,
 	pages={245-261},
-	month={June},
+	month=6,
 	number= 2
 }
 
@@ -23444,7 +23444,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   volume =       6,
   number =       1,
   pages =        {113-146},
-  month =        {March}
+  month =        3
 }
 
 @article{GriSte13,
@@ -23517,22 +23517,20 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @techreport{BlaEmeFia16,
   Author =       {Blattman, Chris and Emeriau, Mathilde and Fiala,
                   Nathan},
-  Date-Added =   {2016-01-13 18:50:39 +0000},
-  Date-Modified ={2016-01-13 18:57:43 +0000},
   Institution =  {Columbia University},
-  Month =        {January},
+  Month =        1,
   Title =        {Do employment programs buy votes? A field experiment
                   in Uganda},
   Type =         {Working Paper},
   Year =         {2016},
-  note = {\url{http://chrisblattman.com/research}}
+  note =         {\url{http://chrisblattman.com/research}}
 }
 
 @techreport{LarMarTru15,
   Author =       {Larreguy, Horacio and Marshall, John and Trucco,
                   Laura},
   Institution =  {Harvard University},
-  Month =        {November},
+  Month =        11,
   Title =        {Breaking Clientelism or Rewarding Incumbents?
                   Evidence from an Urban Titling Program in Mexico},
   Type =         {Working Paper},
