--- a/gk.bib
+++ b/gk.bib
@@ -23493,7 +23493,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   Date-Added =   {2016-01-13 18:50:39 +0000},
   Date-Modified ={2016-01-13 18:57:43 +0000},
   Institution =  {International Food Policy Research Institute},
-  Month =        {November},
+  Month =        11,
   Title =        {The application of social cost--benefit analysis to
                   the evaluation of PROGRESA},
   Type =         {Final Report},
