--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1391,7 +1391,7 @@ pages={1037--1060},
   volume =	 {26},
   year =	 {1998},
   pages =	 {424--427},
-  month =	 {February},
+  month =	 2,
   number =	 {3},
   note =	 {\url{http://www.hmdc.harvard.edu/ROAD/}}
 }
