--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1385,15 +1385,15 @@ pages={1037--1060},
 }
 
 @article{KinPal98,
-  author =	 {Gary King and Bradley Palmquist},
-  title =	 {The Record of American Democracy, 1984-1990},
-  journal =	 {Sociological Methods and Research},
-  volume =	 {26},
-  year =	 {1998},
-  pages =	 {424--427},
-  month =	 2,
-  number =	 {3},
-  note =	 {\url{http://www.hmdc.harvard.edu/ROAD/}}
+  author =       {Gary King and Bradley Palmquist},
+  title =        {The Record of American Democracy, 1984-1990},
+  journal =      {Sociological Methods and Research},
+  volume =       {26},
+  year =         {1998},
+  pages =        {424--427},
+  month =        2,
+  number =       {3},
+  url =          {j.mp/roadD}
 }
 
 @article{BenKin96,
