--- a/gk.bib
+++ b/gk.bib
@@ -24468,7 +24468,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
 @article{Vavreck07,
   title =        {The exaggerated effects of advertising on turnout:
                   The dangers of self-reports},
-  author =       {Vavreck, Lynn and others},
+  author =       {Vavreck, Lynn},
   journal =      {Quarterly Journal of Political Science},
   volume =       {2},
   number =       {4},
@@ -24986,4 +24986,10 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages={535--552},
   year={1985},
   publisher={AAPOR}
+}
+@book{Manin97,
+  title =        {The principles of representative government},
+  author =       {Manin, Bernard},
+  year =         {1997},
+  publisher =    {Cambridge University Press}
 }
