--- a/gk.bib
+++ b/gk.bib
@@ -24993,3 +24993,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {1997},
   publisher =    {Cambridge University Press}
 }
+@book{Lee12,
+  title =        {Bayesian statistics: an introduction},
+  author =       {Lee, Peter M},
+  year =         {2012},
+  publisher =    {John Wiley \& Sons}
+}
