--- a/gk.bib
+++ b/gk.bib
@@ -24999,3 +24999,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2012},
   publisher =    {John Wiley \& Sons}
 }
+@article{RosRub84b,
+  title={Sensitivity of Bayes inference with data-dependent stopping rules},
+  author={Rosenbaum, Paul R and Rubin, Donald B},
+  journal={The American Statistician},
+  volume={38},
+  number={2},
+  pages={106--109},
+  year={1984},
+  publisher={Taylor \& Francis Group}
+}
