--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -755,13 +755,13 @@ pages={1037--1060},
 }
 
 @article{StoKinZen05,
-  author =	 {Heather Stoll and Gary King and Langchee Zeng},
-  title =	 {WhatIf: Software for Evaluating Counterfactuals},
-  journal =	 {Journal of Statistical Software},
-  volume =	 {15},
-  year =	 {2005},
-  number =	 {4},
-  note =	 {{http://www.jstatsoft.org/index.php?vol=15}}
+  author =       {Heather Stoll and Gary King and Langchee Zeng},
+  title =        {WhatIf: Software for Evaluating Counterfactuals},
+  journal =      {Journal of Statistical Software},
+  volume =       {15},
+  year =         {2005},
+  number =       {4},
+  url =          {http://j.mp/2s9X72a}
 }
 
 @article{BecKinZen04,
