--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2519,3 +2519,22 @@ pages={1037--1060},
   month =        11,
   number =         {US Patent 9,483,544}
 }
+@article{KinNie17,
+  title =        {Why Propensity Scores Should Not Be Used for
+                  Matching},
+  author =       {King, Gary and Nielsen, Richard},
+  url =          {http://jmp/1sexgVw},
+  note =         {Working Paper},
+  year =         {2017}
+}
+@article{KinLucNie17,
+  title =        {The Balance-Sample Size Frontier in Matching Methods
+                  for Causal Inference},
+  author =       {King, Gary and Lucas, Christopher and Nielsen,
+                  Richard A},
+  journal =      {American Journal of Political Science},
+  volume =       {61},
+  number =       {2},
+  pages =        {473--489},
+  year =         {2017}
+}
