--- a/gk.bib
+++ b/gk.bib
@@ -5984,7 +5984,7 @@ howpublished = {NBER}
 	volume={99},
 	year={2005},
 	pages={283--300},
-	month={May},
+	month=5,
 	number={2}
 }
 @article{Imai08,
