--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2443,13 +2443,16 @@ pages={1037--1060},
 }
 
 @article{HoImaKin07a,
-  author =	 {Daniel E. Ho and Kosuke Imai and Gary King and
+  author =       {Daniel E. Ho and Kosuke Imai and Gary King and
                   Elizabeth A. Stuart},
-  title =	 {MatchIt: Nonparametric Preprocessing for Parametric
+  title =        {MatchIt: Nonparametric Preprocessing for Parametric
                   Causal Inference},
-  year =	 {Forthcoming},
-  journal =	 {Journal of Statistical Software},
-  url =	 {gking.harvard.edu/matchit}
+  year =         {2011},
+  volume =       42,
+  issue =        8,
+  pages =        {1--28},
+  journal =      {Journal of Statistical Software},
+  url =          {j.mp/2oT3WmS}
 }
 
 @InCollection{Gelman04,
