--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -274,7 +274,7 @@ pages={1037--1060},
 }
 
 @Article{KinNieCar11b,
-  author =	 {Gary King and Richard Nielsen and Carter Coberley
+  author =	 {Gary King and Richard A. Nielsen and Carter Coberley
                   and James Pope and Aaron Wells},
   title =	 {Avoiding Randomization Failure in Program
                   Evaluation},
@@ -287,7 +287,7 @@ pages={1037--1060},
 }
 
 @Article{KinNieCob11,
-  author =	 {Gary King and Richard Nielsen and Carter Coberley
+  author =	 {Gary King and Richard A. Nielsen and Carter Coberley
                   and James Pope and Aaron Wells},
   title =	 {Comparative Effectiveness of Matching Methods for
                   Causal Inference},
@@ -483,7 +483,7 @@ pages={1037--1060},
 }
 
 @article{uHoImaKin07,
-  author =	 {Daniel Ho and Kosuke Imai and Gary King and
+  author =	 {Daniel E. Ho and Kosuke Imai and Gary King and
                   Elizabeth A. Stuart},
   title =	 {Matching as Nonparametric Preprocessing for Reducing
                   Model Dependence in Parametric Causal Inference},
@@ -494,7 +494,7 @@ pages={1037--1060},
 }
 
 @article{HoImaKin07,
-  author =       {Daniel Ho and Kosuke Imai and Gary King and
+  author =       {Daniel E. Ho and Kosuke Imai and Gary King and
                   Elizabeth A. Stuart},
   title =        {Matching as Nonparametric Preprocessing for Reducing
                   Model Dependence in Parametric Causal Inference},
@@ -2525,7 +2525,7 @@ pages={1037--1060},
 @article{KinNie17,
   title =        {Why Propensity Scores Should Not Be Used for
                   Matching},
-  author =       {King, Gary and Nielsen, Richard},
+  author =       {King, Gary and Richard A. Nielsen},
   url =          {http://jmp/1sexgVw},
   note =         {Working Paper},
   year =         {2017}
@@ -2534,7 +2534,7 @@ pages={1037--1060},
   title =        {The Balance-Sample Size Frontier in Matching Methods
                   for Causal Inference},
   author =       {King, Gary and Lucas, Christopher and Nielsen,
-                  Richard A},
+                  Richard A.},
   journal =      {American Journal of Political Science},
   volume =       {61},
   number =       {2},
