--- a/gk.bib
+++ b/gk.bib
@@ -25009,3 +25009,22 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={1984},
   publisher={Taylor \& Francis Group}
 }
+@article{HilLoVav13,
+  title =        {How quickly we forget: The duration of persuasion
+                  effects from mass communication},
+  author =       {Hill, Seth J and Lo, James and Vavreck, Lynn and
+                  Zaller, John},
+  journal =      {Political Communication},
+  volume =       {30},
+  number =       {4},
+  pages =        {521--547},
+  year =         {2013},
+  publisher =    {Taylor \& Francis}
+}
+@book{SidVav14,
+  title =        {The gamble},
+  author =       {Sides, John and Vavreck, Lynn},
+  year =         {2014},
+  address =      {Princeton},
+  publisher =    {Princeton University Press}
+}
