--- a/gk.bib
+++ b/gk.bib
@@ -25022,9 +25022,33 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   publisher =    {Taylor \& Francis}
 }
 @book{SidVav14,
-  title =        {The gamble},
+  title =        {The Gamble},
   author =       {Sides, John and Vavreck, Lynn},
   year =         {2014},
   address =      {Princeton},
   publisher =    {Princeton University Press}
+}
+@article{Bartels14,
+  title =        {Remembering to forget: A note on the duration of
+                  campaign advertising effects},
+  author =       {Bartels, Larry M},
+  journal =      {Political Communication},
+  volume =       {31},
+  number =       {4},
+  pages =        {532--544},
+  year =         {2014},
+  publisher =    {Taylor \& Francis}
+}
+@article{GerGimGre11,
+  title =        {How large and long-lasting are the persuasive
+                  effects of televised campaign ads? Results from a
+                  randomized field experiment},
+  author =       {Gerber, Alan S and Gimpel, James G and Green, Donald
+                  P and Shaw, Daron R},
+  journal =      {American Political Science Review},
+  volume =       {105},
+  number =       {01},
+  pages =        {135--150},
+  year =         {2011},
+  publisher =    {Cambridge Univ Press}
 }
