--- a/gk.bib
+++ b/gk.bib
@@ -24379,7 +24379,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2014},
   publisher =    {CRC Press}
 }
-@book{MalMukSen11,
+@book{GhoMukSen11,
   title =        {Sequential estimation},
   author =       {Ghosh, Malay and Mukhopadhyay, Nitis and Sen, Pranab
                   Kumar},
