--- a/gk.bib
+++ b/gk.bib
@@ -25012,7 +25012,7 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   title =        {How quickly we forget: The duration of persuasion
                   effects from mass communication},
   author =       {Hill, Seth J and Lo, James and Vavreck, Lynn and
-                  Zaller, John},
+                  Zaller, John R.},
   journal =      {Political Communication},
   volume =       {30},
   number =       {4},
@@ -25043,11 +25043,18 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
                   effects of televised campaign ads? Results from a
                   randomized field experiment},
   author =       {Gerber, Alan S and Gimpel, James G and Green, Donald
-                  P and Shaw, Daron R},
+                  P and Shaw, Daron R.},
   journal =      {American Political Science Review},
   volume =       {105},
   number =       {01},
   pages =        {135--150},
   year =         {2011},
   publisher =    {Cambridge Univ Press}
+}
+@book{Baum03,
+  title =        {Soft news goes to war: Public opinion and American
+                  foreign policy in the new media age},
+  author =       {Baum, Matthew A},
+  year =         {2003},
+  publisher =    {Princeton University Press}
 }
