--- a/gk.bib
+++ b/gk.bib
@@ -1,4 +1,4 @@
-% A bibtex file for papers by or coauthored with Gary King
+% A bibtex file used by Gary King and his collaborators
 %
 % To add references, first please CHECK that it doesn't already
 %      exist in this file and then add entries only at the end.
