--- a/gk.bib
+++ b/gk.bib
@@ -25058,4 +25058,25 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2003},
   publisher =    {Princeton University Press}
 }
-
+@article{EdwPol91,
+  title =        {Introduction: The Judicial Regulation of Political
+                  Processes: In Praise of Multiple Criteria},
+  author =       {Edwards, Paul S and Polsby, Nelson W},
+  journal =      {Yale Law \& Policy Review},
+  volume =       {9},
+  number =       {2},
+  pages =        {190--204},
+  year =         {1991},
+  publisher =    {JSTOR}
+}
+@article{MauLeGMon02,
+  title =        {The many faces of configural processing},
+  author =       {Maurer, Daphne and Le Grand, Richard and Mondloch,
+                  Catherine J},
+  journal =      {Trends in cognitive sciences},
+  volume =       {6},
+  number =       {6},
+  pages =        {255--260},
+  year =         {2002},
+  publisher =    {Elsevier}
+}
