--- a/gk.bib
+++ b/gk.bib
@@ -25080,3 +25080,17 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         {2002},
   publisher =    {Elsevier}
 }
+@Article{Tisdale1812,
+  author =       {Elkanah Tisdale},
+  title =        {The Gerry-Mander},
+  journal =      {Boston Gazette},
+  year =         {1812},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
