--- a/gk.bib
+++ b/gk.bib
@@ -25093,4 +25093,13 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   OPTnote =      {},
   OPTannote =    {}
 }
-
+@article{Thurstone27,
+  title={The method of paired comparisons for social values.},
+  author={Thurstone, Louis L},
+  journal={The Journal of Abnormal and Social Psychology},
+  volume={21},
+  number={4},
+  pages={384},
+  year={1927},
+  publisher={American Psychological Association}
+}
