--- a/gk.bib
+++ b/gk.bib
@@ -25103,3 +25103,21 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={1927},
   publisher={American Psychological Association}
 }
+@article{IpKwaChi07,
+  title={Modification and simplification of thurstone scaling method, and its demonstration with a crime seriousness assessment},
+  author={Ip, WC and Kwan, YK and Chiu, LL},
+  journal={Social indicators research},
+  volume={82},
+  number={3},
+  pages={433--442},
+  year={2007},
+  publisher={Springer}
+}
+@incollection{Lior12,
+  title={The art of question phrasing},
+  author={Gideon, Lior},
+  booktitle={Handbook of survey methodology for the social sciences},
+  pages={91--107},
+  year={2012},
+  publisher={Springer}
+}
