--- a/gk.bib
+++ b/gk.bib
@@ -25121,3 +25121,34 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2012},
   publisher={Springer}
 }
+@article{Bartels93,
+  title={Messages received: the political impact of media exposure.},
+  author={Bartels, Larry M},
+  journal={American Political Science Review},
+  volume={87},
+  number={02},
+  pages={267--285},
+  year={1993},
+  publisher={Cambridge Univ Press}
+}
+@book{Kellstedt03,
+  title={The mass media and the dynamics of American racial attitudes},
+  author={Kellstedt, Paul M},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+@article{Beauchamp16,
+  title =        {Predicting and Interpolating State-Level Polls Using
+                  Twitter Textual Data},
+  author =       {Beauchamp, Nicholas},
+  journal =      {American Journal of Political Science},
+  year =         {2016},
+  publisher =    {Wiley Online Library}
+}
+@book{GuoMcC15,
+  title={The Power of Information Networks: New Directions for Agenda Setting},
+  author={Guo, Lei and McCombs, Maxwell E},
+  series={Routledge Studies in Global In},
+  year={2015},
+  publisher={Routledge}
+}
