--- a/gk.bib
+++ b/gk.bib
@@ -25147,3 +25147,79 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2015},
   publisher={Routledge}
 }
+@article{AngPar11,
+  title =        {Non-compactness as voter exchange: Towards a
+                  constitutional cure for gerrymandering},
+  author =       {Angel, Shlomo and Parent, Jason},
+  journal =      {Northwestern Interdisciplary Law Review},
+  volume =       {4},
+  pages =        {89},
+  year =         {2011}
+}
+@article{FryHol11,
+  title =        {Measuring the compactness of political districting
+                  plans},
+  author =       {Fryer Jr, Roland G and Holden, Richard},
+  journal =      {The Journal of Law and Economics},
+  volume =       {54},
+  number =       {3},
+  pages =        {493--535},
+  year =         {2011},
+  publisher =    {University of Chicago Press Chicago, IL}
+}
+@article{Harris64,
+  title={A scientific method of districting},
+  author={Harris, Curtis C},
+  journal={Behavioral Science},
+  volume={9},
+  number={3},
+  pages={219--225},
+  year={1964},
+  publisher={Wiley Online Library}
+}
+@article{Kaiser66,
+  title={An objective method for establishing legislative districts},
+  author={Kaiser, Henry F},
+  journal={Midwest Journal of Political Science},
+  volume={10},
+  number={2},
+  pages={200--213},
+  year={1966},
+  publisher={JSTOR}
+}
+@article{BoyCla64,
+  title={The concept of shape in geography},
+  author={Boyce, Ronald R and Clark, William AV},
+  journal={Geographical Review},
+  volume={54},
+  number={4},
+  pages={561--572},
+  year={1964},
+  publisher={JSTOR}
+}
+@misc{Adams76,
+  title={Model State Reapportionment Process: The Continuing Quest for Fair and Effective Representation, A},
+  author={Adams, Bruce},
+  year={1976},
+  publisher={HeinOnline}
+}
+@article{Wells82,
+  title={How to inhibit gerrymandering: The purpose of districting criteria},
+  author={Wells, David I},
+  journal={National Civic Review},
+  volume={71},
+  number={4},
+  pages={183--187},
+  year={1982},
+  publisher={Wiley Online Library}
+}
+@article{Cox27,
+  title={A method of assigning numerical and percentage values to the degree of roundness of sand grains},
+  author={Cox, EP},
+  journal={Journal of Paleontology},
+  volume={1},
+  number={3},
+  pages={179--183},
+  year={1927},
+  publisher={JSTOR}
+}
