--- a/gk.bib
+++ b/gk.bib
@@ -25223,3 +25223,46 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={1927},
   publisher={JSTOR}
 }
+@article{AltMcD12,
+  title={Redistricting principles for the twenty-first century},
+  author={Altman, Micah and McDonald, Michael P},
+  journal={Case W. Res. L. Rev.},
+  volume={62},
+  pages={1179},
+  year={2012},
+  publisher={HeinOnline}
+}
+@article{BarJer04,
+  title={Redistricting principles and racial representation},
+  author={Barabas, Jason and Jerit, Jennifer},
+  journal={State Politics \& Policy Quarterly},
+  volume={4},
+  number={4},
+  pages={415--435},
+  year={2004},
+  publisher={SAGE Publications}
+}
+@inproceedings{MitGopCar11,
+  title={User rankings from comparisons: Learning permutations in high dimensions},
+  author={Mitliagkas, Ioannis and Gopalan, Aditya and Caramanis, Constantine and Vishwanath, Sriram},
+  booktitle={Communication, Control, and Computing (Allerton), 2011 49th Annual Allerton Conference on},
+  pages={1143--1150},
+  year={2011},
+  organization={IEEE}
+}
+@article{AjtFelHas09,
+  title={Sorting and selection with imprecise comparisons},
+  author={Ajtai, Mikl{\'o}s and Feldman, Vitaly and Hassidim, Avinatan and Nelson, Jelani},
+  journal={Automata, Languages and Programming},
+  pages={37--48},
+  year={2009},
+  publisher={Springer}
+}
+@Book{David88,
+  author =       {H. A. David},
+  title =        {The Method of Paired Comparisons, 2nd ed.},
+  publisher =    {Oxford University Press},
+  year =         1988,
+  address =      {London}
+}
+
