--- a/gk.bib
+++ b/gk.bib
@@ -25265,4 +25265,22 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         1988,
   address =      {London}
 }
-
+@article{CheRod13,
+  title={Unintentional gerrymandering: Political geography and electoral bias in legislatures},
+  author={Chen, Jowei and Rodden, Jonathan and others},
+  journal={Quarterly Journal of Political Science},
+  volume={8},
+  number={3},
+  pages={239--269},
+  year={2013},
+  publisher={Now Publishers, Inc.}
+}
+@article{ChoKimMur14,
+  title={On empirical validation of compactness measures for electoral redistricting and its significance for application of models in the social sciences},
+  author={Chou, Christine and Kimbrough, Steven O and Murphy, Frederic H and Sullivan-Fedock, John and Woodard, C Jason},
+  journal={Social Science Computer Review},
+  volume={32},
+  number={4},
+  pages={534--543},
+  year={2014}
+}
