--- a/gk.bib
+++ b/gk.bib
@@ -25284,3 +25284,20 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   pages={534--543},
   year={2014}
 }
+@article{PilNie93,
+  title={Expressive Harms, Bizarre Districts, and Voting Rights: Evaluating Election-District Appearances After Shaw v. Reno},
+  author={Pildes, Richard H and Niemi, Richard G},
+  journal={Michigan Law Review},
+  volume={92},
+  number={3},
+  pages={483--587},
+  year={1993},
+  publisher={JSTOR}
+}
+@Book{Cain84,
+  author =    {Bruce Cain},
+  title =        {The Reapportionment Puzzle},
+  publisher =    {University of California Press},
+  year =         1984,
+  address =   {Berkeley}}
+
