--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -477,7 +477,7 @@ pages={1037--1060},
   volume =	 {6},
   year =	 {2007},
   pages =	 {2-35},
-  month =	 {January},
+  month =	 1,
   number =	 {1},
   note =	 {{http://gking.harvard.edu/files/abs/jp-abs.shtml}}
 }
@@ -1558,7 +1558,7 @@ pages={1037--1060},
   volume =	 {88},
   year =	 {1994},
   pages =	 {541--559},
-  month =	 {September},
+  month =	 9,
   number =	 {3},
   note =	 {{http://gking.harvard.edu/files/abs/red-abs.shtml}}
 }
@@ -1607,7 +1607,7 @@ pages={1037--1060},
                   Approaches}
 }
 
-@article{KingBruGil93,
+@article{KinBruGil93,
   author =	 {Gary King and John M. Bruce and Michael Gilligan},
   title =	 {The Science of Political Science Graduate
                   Admissions},
@@ -1615,7 +1615,7 @@ pages={1037--1060},
   volume =	 {XXVI},
   year =	 {1993},
   pages =	 {772--778},
-  month =	 {December},
+  month =	 12,
   number =	 {4},
   note =	 {{http://gking.harvard.edu/files/abs/admis-abs.shtml}}
 }
