--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1560,7 +1560,7 @@ pages={1037--1060},
   pages =	 {541--559},
   month =	 9,
   number =	 {3},
-  note =	 {{http://gking.harvard.edu/files/abs/red-abs.shtml}}
+  url =	 {j.mp/redenh}
 }
 
 @incollection{GelKin94c,
