--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1424,13 +1424,13 @@ pages={1037--1060},
 }
 
 @inbook{KinBruGel96,
-  author =	 {Gary King and John Bruce and Andrew Gelman},
-  title =	 {Racial Fairness in Legislative Redistricting},
-  year =	 {1996},
-  publisher =	 {Princeton University Press},
-  editor =	 {Paul E. Peterson, ed.},
-  note =	 {{http://gking.harvard.edu/files/abs/racial-abs.shtml}},
-  journal =	 {Classifying by Race}
+  author =       {Gary King and John Bruce and Andrew Gelman},
+  title =        {Racial Fairness in Legislative Redistricting},
+  year =         {1996},
+  publisher =    {Princeton University Press},
+  editor =       {Paul E. Peterson, ed.},
+  url =          {j.mp/Fairrace},
+  journal =      {Classifying by Race}
 }
 
 @article{King96,
