--- a/gk.bib
+++ b/gk.bib
@@ -25301,3 +25301,14 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year =         1984,
   address =   {Berkeley}}
 
+
+@article{KonEveTou90,
+  title={The Graham scan triangulates simple polygons},
+  author={Kong, Xianshu and Everett, Hazel and Toussaint, Godfried},
+  journal={Pattern Recognition Letters},
+  volume={11},
+  number={11},
+  pages={713--716},
+  year={1990},
+  publisher={Elsevier}
+}
