--- a/gk.bib
+++ b/gk.bib
@@ -17527,7 +17527,7 @@ pages =	 {186-200}
 
 
 @article{Krosnick99,
-  title =	 {{Survey Research}},
+  title =	 {Survey Research},
   author =	 {Jon A. Krosnick},
   journal =	 {Annual Review of Psychology},
   volume =	 {50},
@@ -25310,5 +25310,15 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   number={11},
   pages={713--716},
   year={1990},
+  publisher={Elsevier}
+}
+@article{NieNoc08,
+  title={On the smallest enclosing information disk},
+  author={Nielsen, Frank and Nock, Richard},
+  journal={Information Processing Letters},
+  volume={105},
+  number={3},
+  pages={93--97},
+  year={2008},
   publisher={Elsevier}
 }
