--- a/gk.bib
+++ b/gk.bib
@@ -25322,3 +25322,9 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={2008},
   publisher={Elsevier}
 }
+@article{Fechner66,
+  title={Elements of psychophysics. Vol. I. [Originally published 1860]},
+  author={Fechner, Gustav},
+  year={1966},
+  publisher={New York}
+}
