shapefiles: Lewis, NGHIS

--- a/gk.bib
+++ b/gk.bib
@@ -25328,3 +25328,18 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   year={1966},
   publisher={New York}
 }
+
+@article{LewDevPit13,
+  title={Digital boundary definitions of united states congressional districts, 1789-2012},
+  author={Lewis, Jeffrey B and DeVine, Brandon and Pitcher, Lincoln and Martis, Kenneth C},
+  journal={Data file and code book},
+  year={2013}
+}
+
+@inproceedings{McMLinVan03,
+  title={The national historical geographic information system (NHGIS)},
+  author={McMaster, Robert B and Lindberg, Mark and Van Riper, David},
+  booktitle={Proceedings 21st International Cartographic Conference},
+  pages={821--828},
+  year={2003}
+}
